# scrapy-firebase

./: README.md  pyproject.toml
scrapy_firebase/: __init__.py
