[tool.poetry]
name = "scrapy-firebase"
version = "0.1.0"
description = "Pipeline to Firebase for Scrapy."
authors = ["Marco Cotrufo <marco.cotrufo@devncode.it>", "Rodrigo Delduca <rodrigodelduca@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  'Development Status :: 0 - Beta',
  'Environment :: Console',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python'
]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = ">=1.4.0"
firebase-admin = ">=2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
